- changes to the vendor name for the project composer.json - adding migration dependencies - adding default value for avoiding 'undefined' in rendered result table

--- a/config/install/migrate_plus.migration.nyu_hsl_drf_service_contents.yml
+++ b/config/install/migrate_plus.migration.nyu_hsl_drf_service_contents.yml
@@ -60,6 +60,7 @@ destination:
 
 migration_dependencies:
   required:
+    - nyu_hsl_drf_taxonomy_control_types
     - nyu_hsl_drf_taxonomy_facets
     - nyu_hsl_drf_service_paragraphs
   optional: { }
