--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
         "drupal/migrate_tools": "^4.0",
         "drupal/migrate_plus": "^4.0",
         "drupal/migrate_source_csv": "^3.0",
-        "league/csv": "^9.0",
-        "cubear/finder": "^1.0"
+        "league/csv": "^9.0"
     }
 }
